<resources>

    <string name="app_name">Simple socketcluster chat</string>

    <string name="action_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrations</string>

    <string name="pref_title_port_server">Port</string>
    <string name="pref_title_address_server">Address server</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Nick</string>
    <string name="action_sign_in">Enter chat</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_message">New message</string>
    <string name="port">443</string>
    <string name="address">service.baasil.io</string>
    <string name="pref_secure">SSL connection</string>
    <string name="pref_title_prefix">Channel prefix</string>
    <string name="pref_title_query">Server query</string>
    <string name="query">{serviceKey: \'982851e5–0418–4270–81f5–536fe918198d:main\'}</string>
    <string name="prefix" >982851e5–0418–4270–81f5–536fe918198d:main#</string>
</resources>
